    Example usage:
    ".\tinypedal.exe --log-level=2"
    Note:
    On windows, tinypedal.log is located under APP root folder.
    On linux, tinypedal.log is located under /home/.config/TinyPedal/ folder.
  - Added "Show log" option in Help menu for easy accessing to application log.
  - "Reset data" option is now also accessible from tray menu.

* Linux
  - Fixed wrong "button" argument that breaks "Reset" button in config dialog.

* User guide
  - Add "Command line arguments" section guide.

2.6.0 (2024-01-06)
-----------------------------
* General
  - Optimized and improved performance of most modules and widgets,
    with roughly 50-100% less overall CPU usage than previously.
  - Significantly optimized some resource-heavy Widgets
    with 5-10 times less CPU usage than previously, notably:
    Navigation, Trailing, Track map Widgets.

* Engine Widget
  - Added "show_rpm_maximum" option,
    which shows maximum engine RPM (rev limit).

* Trailing Widget
  - Removed "show_vertical_style" option.

2.5.3 (2023-12-26)
-----------------------------
* General
  - Fixed a main APP window disappearing issue
    when using with multiple screens setup.
    Added auto position correction function to force
    main APP window stay on visible screen area.
    Thanks to @Capeta for helping with test.
  - Fixed incorrect enabled module count display on Module tab.
    Further improved module load/reload functions.
  - Fixed Reset dialog title text.

2.5.2 (2023-12-23)
-----------------------------
* General
  - Improved APP, API and modules closing speed.
  - Improved vehicle-class color selection function.
  - Improved heatmap color selection function.
  - Re-verify delta data after auto-correction.
  - Added minimum threshold for force ratio calculation.
  - Simplified module import & toggle function.
  - Ignore JSON file extension name case when loading.
  - Correctly restore minimized config window when accessing from tray menu.