@@ -309,8 +309,7 @@ class HeatmapEditor(QDialog):
         cfg.save(0, "heatmap")
         while cfg.is_saving:  # wait saving finish
             time.sleep(0.01)
-        wctrl.close()
-        wctrl.start()
+        wctrl.reload()
 
 
 class CreateHeatmapPreset(QDialog):
